@@ -1995,7 +1995,7 @@ if test x"$*" = x; then
 	tests="${tests} serverpatch log log2 logopt ann ann-id"
 	# Repository Storage (RCS file format, CVS lock files, creating
 	# a repository without "cvs init", &c).
-	tests="${tests} crerepos rcs rcs2 rcs3 rcs4 rcs5"
+	tests="${tests} crerepos rcs rcs2 rcs3 rcs4 rcs5 rcs6"
 	tests="$tests lockfiles backuprecover"
 	tests="${tests} sshstdio"
 	# More history browsing, &c.
@@ -23327,6 +23327,8 @@ line5"
 
 
 	rcs6)
+	  # FIXCVS - The following comment should apply after this is fixed:
+	  #
 	  # Test that CVS notices a specific type of corruption in the RCS
 	  # archive.  In the past, this type of corruption had turned up after
 	  # a user ineptly attempted to delete a revision from an arcvhive 
@@ -23377,8 +23379,12 @@ $CVSROOT_DIRNAME/rcs6/cfile,v  <--  cfile
 new revision: 1\.2; previous revision: 1\.1
 done"
 
+	  # Can still tag.
+	  dotest rcs6-4 "$testcvs -q tag -F current" "T cfile"
+
 	  # This finally reports the corruption.
-	  dotest rcs6-4 "$testcvs -q tag -F current"
+	  dotest_fail rcs6-5 "$testcvs -q up -r1.1 cfile" \
+"$SPROG \[update aborted\]: invalid change text in $CVSROOT_DIRNAME/rcs6/cfile,v"
 
 	  if $keep; then
 	    echo Keeping $TESTDIR and exiting due to --keep
